--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -1,7 +1,7 @@
   {% load static %}
   <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
-    <a href="index3.html" class="brand-link">
+    <a href="{% url 'pos_app:home' %}" class="brand-link">
       <img src="{% static 'dist/img/AdminLTELogo.png' %}" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
       <span class="brand-text font-weight-light">AdminLTE 3</span>
     </a>
@@ -44,30 +44,14 @@
               </p>
             </a>
             <ul class="nav nav-treeview">
-            <li class="nav-item">
-                <a href="{% url 'product:create_category_url' %}" class="nav-link active">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Category</p>
-                </a>
-              </li>              
-              <li class="nav-item">
-                <a href="{% url 'product:create_product_url' %}" class="nav-link active">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Product</p>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="{% url 'product:create_country_url' %}" class="nav-link active">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Country</p>
-                </a>
-              </li> 
-              <li class="nav-item">
-                <a href="{% url 'product:create_seller_url' %}" class="nav-link active">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Seller</p>
-                </a>
-              </li>              
+
+              {% include 'partial_sidebar/create_category_sidebar.html' %}            
+              {% include 'partial_sidebar/create_country_sidebar.html' %}            
+              {% include 'partial_sidebar/create_seller_sidebar.html' %}            
+              {% include 'partial_sidebar/create_product_sidebar.html' %}                          
+
+
+
               <li class="nav-item">
                 <a href="./index3.html" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
